# Resources-and-Techniques-in-AI-agents

./: .gitignore
Airflow/AirflowETL-postgres/: README.md  requirements.txt
Airflow/AirflowETL-postgres/.astro/: config.yaml
Airflow/AirflowETL-postgres/dags/: etl.py
CICD/GithubAction-Docker/DockerImage/: DockerFile  README.md
CICD/GithubAction-Docker/DockerImage/.github/workflows/: cicd.yml
ContextEngineering/: Resources.md
Databricks/MiniProject1/: MiniProject1_DataReadProcess.ipynb
Testing/Browser-TestAutomationFramework/: README.md  main.py  pyproject.toml
Testing/Browser-TestAutomationFramework/src/: Agent.py
graphDatabases/: building_gdb_from_text.ipynb  querying_wit_RAG.ipynb  startingWithCypher_graphDatabases.ipynb
graphDatabases/Data/: create_graph_database.cypher
