[project]
name = "browser-testautomationframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "browser-use>=0.5.5",
    "google-ai-generativelanguage>=0.6.18",
    "langchain-openai>=0.3.28",
    "pydantic>=2.11.7",
]
